--- a/w14.html
+++ b/w14.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Director</title>
   </head>
-  <body>
-    <div>Мои любимые режиссеры</div>
-
+  <body class="root">
+    <h1>Мои любимые режиссеры</h1>
     <script src="w14.js"></script>
   </body>
 </html>
